wip basic dijkstra impl

--- a/cpp/tools.vcxproj
+++ b/cpp/tools.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="src\common\geometry.h" />
     <ClInclude Include="src\common\level.h" />
     <ClInclude Include="src\common\memory\allocator.h" />
+    <ClInclude Include="src\common\path\dijkstra.h" />
     <ClInclude Include="src\common\path\path.h" />
     <ClInclude Include="src\common\util\buffer.h" />
     <ClInclude Include="src\common\util\packed_array.h" />
@@ -212,6 +213,7 @@
     <ClCompile Include="src\common\geometry.cpp" />
     <ClCompile Include="src\common\level.cpp" />
     <ClCompile Include="src\common\memory\allocator.cpp" />
+    <ClCompile Include="src\common\path\dijkstra.cpp" />
     <ClCompile Include="src\common\path\path.cpp" />
     <ClCompile Include="src\common\util\buffer.cpp" />
     <ClCompile Include="src\common\util\packed_array.cpp" />
