Basic Dijkstra implementation

--- a/cpp/bin/imgui.ini
+++ b/cpp/bin/imgui.ini
@@ -84,7 +84,12 @@ Size=350,560
 Collapsed=0
 
 [Window][World]
-Pos=147,322
+Pos=139,310
 Size=435,202
+Collapsed=0
+
+[Window][Dijkstra]
+Pos=431,-24
+Size=806,745
 Collapsed=0
 
