Pathfinding implementation + wip action list generation from path

--- a/cpp/bin/imgui.ini
+++ b/cpp/bin/imgui.ini
@@ -89,7 +89,12 @@ Size=435,202
 Collapsed=0
 
 [Window][Dijkstra]
-Pos=431,-24
+Pos=216,15
 Size=806,745
+Collapsed=0
+
+[Window][Path Steps]
+Pos=60,60
+Size=43,133
 Collapsed=0
 
