--- a/cpp/bin/imgui.ini
+++ b/cpp/bin/imgui.ini
@@ -89,12 +89,17 @@ Size=435,202
 Collapsed=0
 
 [Window][Dijkstra]
-Pos=216,15
-Size=806,745
+Pos=360,74
+Size=806,791
 Collapsed=0
 
 [Window][Path Steps]
 Pos=60,60
-Size=43,133
+Size=50,235
+Collapsed=0
+
+[Window][Sort Test]
+Pos=207,177
+Size=271,796
 Collapsed=0
 
