implemented basic tool system and implemented wall and a start of the path tool

--- a/cpp/bin/imgui.ini
+++ b/cpp/bin/imgui.ini
@@ -39,7 +39,7 @@ Size=431,354
 Collapsed=0
 
 [Window][Dispatcher Editor]
-Pos=329,223
+Pos=492,160
 Size=501,348
 Collapsed=0
 
@@ -84,8 +84,8 @@ Size=350,560
 Collapsed=0
 
 [Window][World]
-Pos=12,234
-Size=217,220
+Pos=177,203
+Size=244,245
 Collapsed=0
 
 [Window][Dijkstra]
@@ -101,5 +101,10 @@ Collapsed=0
 [Window][Sort Test]
 Pos=207,177
 Size=271,796
+Collapsed=0
+
+[Window][Tool Selector]
+Pos=382,548
+Size=222,97
 Collapsed=0
 
