--- a/cpp/tools.vcxproj.filters
+++ b/cpp/tools.vcxproj.filters
@@ -79,9 +79,6 @@
     <ClInclude Include="src\tools\editor\transforms\move.h">
       <Filter>src\common\character\action\transforms</Filter>
     </ClInclude>
-    <ClInclude Include="src\tools\editor\editor_world.h">
-      <Filter>src\tools\editor</Filter>
-    </ClInclude>
     <ClInclude Include="src\common\path\path.h">
       <Filter>src\common\path</Filter>
     </ClInclude>
@@ -93,6 +90,12 @@
     </ClInclude>
     <ClInclude Include="src\tools\editor\editor_pathfind.h">
       <Filter>src\tools\editor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tools\editor\world\editor_world.h">
+      <Filter>src\tools\editor\world</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tools\editor\world\tools\path_tool.h">
+      <Filter>src\tools\editor\world\tools</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -165,9 +168,6 @@
     <ClCompile Include="src\tools\editor\transforms\move.cpp">
       <Filter>src\common\character\action\transforms</Filter>
     </ClCompile>
-    <ClCompile Include="src\tools\editor\editor_world.cpp">
-      <Filter>src\tools\editor</Filter>
-    </ClCompile>
     <ClCompile Include="src\common\path\path.cpp">
       <Filter>src\common\path</Filter>
     </ClCompile>
@@ -179,6 +179,12 @@
     </ClCompile>
     <ClCompile Include="src\tools\editor\editor_pathfind.cpp">
       <Filter>src\tools\editor</Filter>
+    </ClCompile>
+    <ClCompile Include="src\tools\editor\world\editor_world.cpp">
+      <Filter>src\tools\editor\world</Filter>
+    </ClCompile>
+    <ClCompile Include="src\tools\editor\world\tools\path_tool.cpp">
+      <Filter>src\tools\editor\world\tools</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -214,6 +220,12 @@
     </Filter>
     <Filter Include="src\common\memory">
       <UniqueIdentifier>{e98f8126-a4ba-41e0-89ce-bc632f135c25}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\tools\editor\world">
+      <UniqueIdentifier>{7323efd8-9d73-4ff8-ab7e-c2661e095910}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\tools\editor\world\tools">
+      <UniqueIdentifier>{2fc63778-067e-4a78-9eaa-ec847dd57267}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
