tests for character vs character collisions

--- a/cpp/bin/imgui.ini
+++ b/cpp/bin/imgui.ini
@@ -104,12 +104,22 @@ Size=271,796
 Collapsed=0
 
 [Window][Tool Selector]
-Pos=497,527
+Pos=509,530
 Size=226,121
 Collapsed=0
 
 [Window][Collision Editor]
-Pos=319,219
-Size=612,436
+Pos=215,42
+Size=830,695
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=449,267
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=361,258
+Size=435,400
 Collapsed=0
 
